P4ADEV-1303 resolved change request