@@ -46,9 +46,9 @@ class IamUserInfoDTO2UserInfoMapperTest {
     void givenNotUserWhenApplyThenUserNotFoundException(){
         // Given
         IamUserInfoDTO iamUserInfo = IamUserInfoDTO.builder()
-                .userId("EXTERNALUSERID")
-                .innerUserId("INNERUSERID")
-                .build();
+          .userId("EXTERNALUSERID")
+          .innerUserId("INNERUSERID")
+          .build();
 
         Mockito.when(usersRepositoryMock.findById(iamUserInfo.getInnerUserId())).thenReturn(Optional.empty());
 
@@ -60,104 +60,145 @@ class IamUserInfoDTO2UserInfoMapperTest {
     void givenCompleteDataWhenApplyThenOk(){
         // Given
         IamUserInfoDTO iamUserInfo = IamUserInfoDTO.builder()
-                .userId("EXTERNALUSERID")
-                .innerUserId("INNERUSERID")
-                .fiscalCode("FISCALCODE")
-                .familyName("FAMILYNAME")
-                .name("NAME")
-                .issuer("ISSUER")
-                .organizationAccess(IamUserOrganizationRolesDTO.builder()
-                        .organizationIpaCode("ORG")
-                        .email("EMAIL")
-                        .build())
-                .build();
+          .userId("EXTERNALUSERID")
+          .innerUserId("INNERUSERID")
+          .fiscalCode("FISCALCODE")
+          .familyName("FAMILYNAME")
+          .name("NAME")
+          .issuer("ISSUER")
+          .organizationAccess(IamUserOrganizationRolesDTO.builder()
+            .organizationIpaCode("ORG")
+            .email("EMAIL")
+            .build())
+          .build();
 
         User user = User.builder()
-                .userId(iamUserInfo.getInnerUserId())
-                .mappedExternalUserId("MAPPEDEXTERNALUSERID")
-                .build();
+          .userId(iamUserInfo.getInnerUserId())
+          .mappedExternalUserId("MAPPEDEXTERNALUSERID")
+          .build();
 
         List<Operator> organizationRoles = List.of(Operator.builder()
-                        .operatorId("OPERATORID")
-                        .organizationIpaCode("ORG")
-                        .roles(Set.of("ROLE"))
-                .build());
+          .operatorId("OPERATORID")
+          .organizationIpaCode("ORG")
+          .roles(Set.of("ROLE"))
+          .email("EMAIL")
+          .build());
 
         UserInfo expected = UserInfo.builder()
+          .userId("INNERUSERID")
+          .mappedExternalUserId("MAPPEDEXTERNALUSERID")
           .fiscalCode("FISCALCODE")
           .familyName("FAMILYNAME")
           .name("NAME")
           .issuer("ISSUER")
           .organizationAccess("ORG")
+          .organizations(List.of(UserOrganizationRoles.builder()
+            .operatorId("OPERATORID")
+            .organizationIpaCode("ORG")
+            .roles(List.of("ROLE"))
+            .email("EMAIL")
+            .build()))
           .build();
 
-        testApplyOk(iamUserInfo, user, organizationRoles, expected);
+        Mockito.when(usersRepositoryMock.findById(iamUserInfo.getInnerUserId())).thenReturn(Optional.of(user));
+        Mockito.when(operatorsRepositoryMock.findAllByUserId(user.getUserId())).thenReturn(organizationRoles);
+
+        // When
+        UserInfo result = mapper.apply(iamUserInfo);
+
+        // Then
+        Assertions.assertEquals(expected, result);
     }
 
     @Test
     void givenNotOperatorsWhenApplyThenOk(){
         // Given
         IamUserInfoDTO iamUserInfo = IamUserInfoDTO.builder()
-                .userId("EXTERNALUSERID")
-                .innerUserId("INNERUSERID")
-                .fiscalCode("FISCALCODE")
-                .familyName("FAMILYNAME")
-                .name("NAME")
-                .issuer("ISSUER")
-                .organizationAccess(IamUserOrganizationRolesDTO.builder()
-                        .organizationIpaCode("ORG")
-                        .email("EMAIL")
-                        .build())
-                .build();
+          .userId("EXTERNALUSERID")
+          .innerUserId("INNERUSERID")
+          .fiscalCode("FISCALCODE")
+          .familyName("FAMILYNAME")
+          .name("NAME")
+          .issuer("ISSUER")
+          .organizationAccess(IamUserOrganizationRolesDTO.builder()
+            .organizationIpaCode("ORG")
+            .email("EMAIL")
+            .build())
+          .build();
 
         User user = User.builder()
-                .userId(iamUserInfo.getInnerUserId())
-                .mappedExternalUserId("MAPPEDEXTERNALUSERID")
-                .build();
+          .userId(iamUserInfo.getInnerUserId())
+          .mappedExternalUserId("MAPPEDEXTERNALUSERID")
+          .build();
 
         UserInfo expected = UserInfo.builder()
+          .userId("INNERUSERID")
+          .mappedExternalUserId("MAPPEDEXTERNALUSERID")
           .fiscalCode("FISCALCODE")
           .familyName("FAMILYNAME")
           .name("NAME")
           .issuer("ISSUER")
           .organizationAccess("ORG")
+          .organizations(Collections.emptyList())
           .build();
 
-        testApplyOk(iamUserInfo, user, Collections.emptyList(), expected);
+        Mockito.when(usersRepositoryMock.findById(iamUserInfo.getInnerUserId())).thenReturn(Optional.of(user));
+        Mockito.when(operatorsRepositoryMock.findAllByUserId(user.getUserId())).thenReturn(Collections.emptyList());
+
+        // When
+        UserInfo result = mapper.apply(iamUserInfo);
+
+        // Then
+        Assertions.assertEquals(expected, result);
     }
 
     @Test
     void givenNoOrganizationAccessWhenApplyThenOk(){
         // Given
         IamUserInfoDTO iamUserInfo = IamUserInfoDTO.builder()
-                .userId("EXTERNALUSERID")
-                .innerUserId("INNERUSERID")
-                .fiscalCode("FISCALCODE")
-                .familyName("FAMILYNAME")
-                .name("NAME")
-                .issuer("ISSUER")
-                .build();
-
-        User user = User.builder()
-                .userId(iamUserInfo.getInnerUserId())
-                .mappedExternalUserId("MAPPEDEXTERNALUSERID")
-                .build();
-
-        List<Operator> organizationRoles = List.of(Operator.builder()
-                .operatorId("OPERATORID")
-                .organizationIpaCode("ORG")
-                .roles(Set.of("ROLE"))
-                .email("EMAIL")
-                .build());
-        
-        UserInfo expected = UserInfo.builder()
+          .userId("EXTERNALUSERID")
+          .innerUserId("INNERUSERID")
           .fiscalCode("FISCALCODE")
           .familyName("FAMILYNAME")
           .name("NAME")
           .issuer("ISSUER")
           .build();
 
-        testApplyOk(iamUserInfo, user, organizationRoles, expected);
+        User user = User.builder()
+          .userId(iamUserInfo.getInnerUserId())
+          .mappedExternalUserId("MAPPEDEXTERNALUSERID")
+          .build();
+
+        List<Operator> organizationRoles = List.of(Operator.builder()
+          .operatorId("OPERATORID")
+          .organizationIpaCode("ORG")
+          .roles(Set.of("ROLE"))
+          .email("EMAIL")
+          .build());
+
+        UserInfo expected = UserInfo.builder()
+          .userId("INNERUSERID")
+          .mappedExternalUserId("MAPPEDEXTERNALUSERID")
+          .fiscalCode("FISCALCODE")
+          .familyName("FAMILYNAME")
+          .name("NAME")
+          .issuer("ISSUER")
+          .organizations(List.of(UserOrganizationRoles.builder()
+            .operatorId("OPERATORID")
+            .organizationIpaCode("ORG")
+            .roles(List.of("ROLE"))
+            .email("EMAIL")
+            .build()))
+          .build();
+
+        Mockito.when(usersRepositoryMock.findById(iamUserInfo.getInnerUserId())).thenReturn(Optional.of(user));
+        Mockito.when(operatorsRepositoryMock.findAllByUserId(user.getUserId())).thenReturn(organizationRoles);
+
+        // When
+        UserInfo result = mapper.apply(iamUserInfo);
+
+        // Then
+        Assertions.assertEquals(expected, result);
     }
 
     @Test
@@ -186,33 +227,15 @@ class IamUserInfoDTO2UserInfoMapperTest {
           .issuer("IPA_CODE")
           .organizations(Collections.singletonList(UserOrganizationRoles.builder()
             .organizationIpaCode("IPA_CODE")
-            .roles(Collections.singletonList(Constants.ROLE_ADMIN))
+            .roles(List.of(Constants.ROLE_ADMIN))
             .build()))
           .build();
 
-        testApplyOk(iamUserInfo, null, null, expected);
-    }
-
-    private void testApplyOk(IamUserInfoDTO iamUserInfo, User user, List<Operator> organizationRoles, UserInfo expected) {
-
-        if (!iamUserInfo.isSystemUser()) {
-            Mockito.when(usersRepositoryMock.findById(iamUserInfo.getInnerUserId())).thenReturn(Optional.of(user));
-            Mockito.when(operatorsRepositoryMock.findAllByUserId(user.getUserId())).thenReturn(organizationRoles);
-            expected.setUserId(user.getUserId());
-            expected.setMappedExternalUserId(user.getMappedExternalUserId());
-            expected.setOrganizations(organizationRoles.stream()
-              .map(r -> UserOrganizationRoles.builder()
-                .operatorId(r.getOperatorId())
-                .organizationIpaCode(r.getOrganizationIpaCode())
-                .roles(new ArrayList<>(r.getRoles()))
-                .email(r.getEmail())
-                .build())
-              .toList());
-        }
         // When
         UserInfo result = mapper.apply(iamUserInfo);
 
         // Then
         Assertions.assertEquals(expected, result);
     }
+
 }
